--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Layout Master</title>
+  <title>Layout Template</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
